20_poc/petunia/petunia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petunia
spec:
  rules:
  - host: petunia.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: villadiana
            port:
              number: 8080
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: villadiana
            port:
              number: 8080
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: villadiana
            port:
              number: 8080
      - path: /logout
        pathType: Prefix
        backend:
          service:
            name: villadiana
            port:
              number: 8080
      - path: /me
        pathType: Prefix
        backend:
          service:
            name: villadiana
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alpicola
            port:
              number: 3000
